# FredSeriesAI

./: .env.example  .gitignore  Dockerfile  README.md  langgraph.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  integration-live.yml  integration-tests.yml
scripts/: smoke_fred.py
scripts/fraser/: download_monetary_to_s3.py  download_selected_assets.py  index_fraser.py
scripts/fraser/extractor/: extract.py  load_meetings.py  prompt.txt
scripts/fraser/output/: title_677_metadata.json
scripts/hard/: m2_vs_inflation_1970s.py
smoke_outputs/: tool_eval.md
src/: api_server.py
src/retrieval_graph/: __init__.py  configuration.py  fred_tool.py  graph.py  hybrid_tool.py  index_graph.py  mcp_server.py  prompts.py  retrieval.py  services.py  state.py  utils.py
terraform/: app_runner.tf  backend.tf  terraform.tfvars.example
tests/integration_tests/: test_graph.py  test_graph_live.py
tests/unit_tests/: test_api_basic.py  test_fred_tools.py
