[project]
name = "retrieval-graph"
version = "0.0.1"
description = "Starter template for making a custom retrieval graph in LangGraph."
authors = [
    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.2.6",
    "langchain-aws>=0.3.0",
    "langchain>=0.3.27",
    "python-dotenv>=1.0.1",
    "pydantic>=2.11.7",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "fredapi>=0.5.1",
    "boto3>=1.34.0",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "requests>=2.32.3",
    "psycopg2-binary>=2.9.9"
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.retrieval_graph", "retrieval_graph"]
[tool.setuptools.package-dir]
"langgraph.templates.retrieval_graph" = "src/retrieval_graph"
"retrieval_graph" = "src/retrieval_graph"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
line-length = 120
extend-exclude = ["scripts"]
lint.select = [
    "E",
    "F",
    "I",
    "UP"
]
lint.ignore = [
    "E402", # allow imports after sys.path tweaks in tests
    "E501", # ignore line length for now
    "UP006",
    "UP007",
    "UP035",
]
